force-app/main/default/objects/Card__c/Card__c.object-meta.xml
<CustomObject>
    <label>Card</label>
    <nameField>
        <displayFormat>Card-{000}</displayFormat>
        <label>Card ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>