force-app/main/default/objects/Card__c/fields/Board__c.field-meta.xml
<CustomField>
    <fullName>Board__c</fullName>
    <label>Board</label>
    <referenceTo>Board__c</referenceTo>
    <relationshipLabel>Cards</relationshipLabel>
    <relationshipName>Cards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>