force-app/main/default/objects/Card__c/fields/Consensus_Category__c.field-meta.xml
<CustomField>
    <fullName>Consensus_Category__c</fullName>
    <description>Cards can be categorized by color into what the consensus was about the card. For example, green may mean Accepted and red may mean Rejected. Use Category mappings to set these mappings.</description>
    <inlineHelpText>Cards can be categorized by color into what the consensus was about the card. For example, green may mean Accepted and red may mean Rejected. Use Category mappings to set these mappings.</inlineHelpText>
    <label>Consensus Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>