force-app/main/default/objects/Card__c/fields/Created_By_Guest__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Guest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By (Guest)</label>
    <referenceTo>Lane_User__c</referenceTo>
    <relationshipLabel>Cards</relationshipLabel>
    <relationshipName>Cards</relationshipName>
    <type>Lookup</type>
</CustomField>