force-app/main/default/objects/Card__c/fields/Intent_Category__c.field-meta.xml
<CustomField>
    <fullName>Intent_Category__c</fullName>
    <description>Cards can be categorized into what the intent of the card was. For example, a card may be about a Business Goal or Persona. Use category mappings to adjust the intent. Category mappings use x and y coordinates to determine intent.</description>
    <inlineHelpText>Cards can be categorized into what the intent of the card was. For example, a card may be about a Business Goal or Persona. Use category mappings to adjust the intent. Category mappings use x and y coordinates to determine intent.</inlineHelpText>
    <label>Intent Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>