force-app/main/default/objects/Card__c/fields/Last_Modified_By_Guest__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_Guest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Modified By (Guest)</label>
    <referenceTo>Lane_User__c</referenceTo>
    <relationshipLabel>Cards (Last Modified By (Guest))</relationshipLabel>
    <relationshipName>Cards1</relationshipName>
    <type>Lookup</type>
</CustomField>