force-app/main/default/objects/Card__c/fields/Y_Position__c.field-meta.xml
<CustomField>
    <fullName>Y_Position__c</fullName>
    <label>Y Position</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>